--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,9 +2,14 @@ html, body {
     background-color: #fff;
     color: #636b6f;
     font-family: 'Gloria Hallelujah', cursive;
-    font-weight: 100;
-    height: 100vh;
-    margin: 0;
+    font-weight: normal;
+    height: auto;
+}
+
+h2 {
+  font-family: 'Shojumaru', serif;
+  font-size: 35px;
+  color: #000000;
 }
 
 .full-height {
@@ -33,9 +38,13 @@ html, body {
 
 .title {
     font-family: 'Shojumaru', serif;
-    font-size: 74px;
+    font-size: 75px;
     color: #000000;
+}
 
+.display {
+  font-size: 50px;
+  color: #000000;
 }
 
 .subtitle {
